--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <title>Snake Game</title>
+    <link rel="shortcut icon" href="img/snake.ico" >
 </head>
 <body>
+    <h1>SNAKE GAME!!</h1>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
+<p></p>
+<footer>Desenvolvido por <a href=https://www.instagram.com/andremakoski>André Makoski</a></footer>
 </html>
